add_executable(auto_stitcher main.cpp)
target_sources(auto_stitcher PRIVATE alignment.cpp alignment.h featureMatch.cpp featureMatch.h)
target_sources(auto_stitcher PRIVATE graphPro.cpp graphPro.h topology.cpp topology.h util.cpp util.h mosaic.cpp mosaic.h)
target_link_libraries(auto_stitcher tbb exiv2 ${CMAKE_SOURCE_DIR}/../levmar-2.6/build/liblevmar.a)
target_link_libraries(auto_stitcher ${LAPACK_LIBRARIES} ${LAPACK_LINKER_FLAGS} ${BLAS_LIBRARIES} ${OpenCV_LIBS})
